dfir_rs/tests/compile-fail/nightly/surface_handoff_adjacent.stderr
error: Adjacent handoff/singleton operators are not allowed. Remove one or insert an operator between them.
 --> tests/compile-fail/nightly/surface_handoff_adjacent.rs:5:53
  |
5 |         source_iter(0..10) -> handoff() -> tee() -> handoff() -> for_each(std::mem::drop);
  |                                                     ^^^^^^^

warning: use of deprecated struct `main::diagnostic_11426154708734257887::Warning`: `tee` should have at least 2 output(s), actually has 1.
 --> tests/compile-fail/nightly/surface_handoff_adjacent.rs:5:44
  |
5 |         source_iter(0..10) -> handoff() -> tee() -> handoff() -> for_each(std::mem::drop);
  |                                            ^^^
  |
note: the lint level is defined here
 --> tests/compile-fail/nightly/surface_handoff_adjacent.rs:5:44
  |
5 |         source_iter(0..10) -> handoff() -> tee() -> handoff() -> for_each(std::mem::drop);
  |                                            ^^^
